[tool.poetry]
name = "mysql2s3"
version = "0.1.0"
description = "Upload Mydumper directories to S3."
authors = ["laixintao <laixintaoo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
watchdog = "^0.10.3"
minio = "^6.0.0"
click = "^7.1.2"
psutil = "^5.7.2"

[tool.poetry.scripts]
mysql2s3 = 'mysql2s3.mysql2s3:main'
verify-dump = 'mysql2s3.verify_dump:main'

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
