[tool.poetry]
name = "mydumper2s3"
version = "0.1.3"
description = "Upload Mydumper directories to S3."
authors = ["laixintao <laixintaoo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
watchdog = "^0.10.3"
minio = "^6.0.0"
click = "^7.1.2"
psutil = "^5.7.2"

[tool.poetry.scripts]
mydumper2s3 = 'mydumper2s3.mydumper2s3:main'
verify-dump = 'mydumper2s3.verify_dump:main'
delete-bucket = 'mydumper2s3.delete_bucket:main'

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.3"
pytest = "^6.0.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
